# HonestDAP

./: .config  CMakeLists.txt  Kconfig  README.md  rtconfig.h
applications/: bitband.h  dap_loop.c  dap_main.c  dap_main.h  main.c  usb2uart.c
board/: Kconfig  board.c
board/CubeMX_Config/: .mxproject  CubeMX_Config.ioc
board/CubeMX_Config/Inc/: main.h
board/CubeMX_Config/MDK-ARM/: CubeMX_Config.uvprojx
board/CubeMX_Config/Src/: main.c  stm32f4xx_hal_msp.c
